# shout

./: .gitignore  README.md  pyproject.toml
Formula/: shout.rb
hammerspoon/: shout.lua
karabiner/: caps-to-f19.json
launchd/: com.greg.shout.capslock-remap.plist  com.greg.shout.plist
scripts/: bench-cold-start.py
src/shout/: __init__.py  cli.py  config.py  daemon.py  hotkey.py  inject.py  menubar.py  overlay.py  paths.py  permissions.py  protocol.py  stream.py
